testdata/baselines/reference/compiler/intrinsicErrors.errors.txt
intrinsicErrors.ts(10,11): error TS95200: Intrinsic type parse error: expected ':' in object literal
intrinsicErrors.ts(17,11): error TS95202: Intrinsic type runtime error: undefined variable 'const'
intrinsicErrors.ts(21,11): error TS95200: Intrinsic type parse error: unexpected token at position 14
intrinsicErrors.ts(25,11): error TS95200: Intrinsic type parse error: expected identifier at position 1
intrinsicErrors.ts(29,11): error TS95200: Intrinsic type parse error: unexpected token at position 16
intrinsicErrors.ts(33,11): error TS95200: Intrinsic type parse error: unexpected token at position 15
intrinsicErrors.ts(40,11): error TS95204: Intrinsic type requires a function type.
intrinsicErrors.ts(48,12): error TS95202: Intrinsic type runtime error: cannot access property 'foo' on number
intrinsicErrors.ts(56,12): error TS95201: Intrinsic type evaluation exceeded computation budget.


==== intrinsicErrors.ts (9 errors) ====
    const NeverType = Symbol.for("tsi.never") as any;
    
    // switch: not supported
    const withSwitch = (x: any) => {
        switch (typeof x) {
            case 'string': return x;
            default: return NeverType;
        }
    };
    type E1 = Intrinsic<typeof withSwitch, ["hello"]>;
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95200: Intrinsic type parse error: expected ':' in object literal
    
    // const (only let is supported)
    const withConst = (x: number) => {
        const y = x + 1;
        return y;
    };
    type E2 = Intrinsic<typeof withConst, [5]>;
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95202: Intrinsic type runtime error: undefined variable 'const'
    
    // optional chaining: not supported
    const withOptional = (x: any) => x?.name;
    type E3 = Intrinsic<typeof withOptional, [{ name: "Alice" }]>;
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95200: Intrinsic type parse error: unexpected token at position 14
    
    // destructured params: not supported
    const withDestructure = ({name, age}: {name: string, age: number}) => name;
    type E4 = Intrinsic<typeof withDestructure, [{ name: "Alice", age: 30 }]>;
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95200: Intrinsic type parse error: expected identifier at position 1
    
    // === (only == is supported)
    const withStrict = (x: any) => x === 'hello' ? x : NeverType;
    type E5 = Intrinsic<typeof withStrict, ["hello"]>;
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95200: Intrinsic type parse error: unexpected token at position 16
    
    // nullish coalescing: not supported
    const withNullish = (x: any) => x ?? 'default';
    type E6 = Intrinsic<typeof withNullish, [null]>;
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95200: Intrinsic type parse error: unexpected token at position 15
    
    // template literal: not supported
    const withTemplate = (name: string) => `hello ${name}`;
    type E7 = Intrinsic<typeof withTemplate, ["world"]>;
    
    // string form is not supported
    type E8 = Intrinsic<"not valid dsl at all", [42]>;
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95204: Intrinsic type requires a function type.
    
    // runtime error: division by zero produces Infinity, not an error
    const divByZero = (n: number) => n / 0;
    type E9 = Intrinsic<typeof divByZero, [42]>;
    
    // runtime error: property access on number
    const badAccess = (n: any) => n.foo;
    type E10 = Intrinsic<typeof badAccess, [42]>;
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95202: Intrinsic type runtime error: cannot access property 'foo' on number
    
    // budget exceeded: infinite loop
    const infinite = (n: number) => {
        let i: number = 0;
        while (i < n) { i = i + 1; }
        return i;
    };
    type E11 = Intrinsic<typeof infinite, [100000]>;
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95201: Intrinsic type evaluation exceeded computation budget.
    